# RBSoftware

./: .env.example  .gitignore  =7.2.0  AGENTS.md  ARCHITECTURE.md  Makefile  PROJECT_CONTEXT.md  README.md  compose.dev.yml  compose.prod.yml  db.sql  docker-compose.yml
backend/: .env.example  Dockerfile  Makefile  alembic.ini  alembic_autogen.db  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 086159e95965_add_school_teachers.py  0b222994fb89_create_auth_tables.py  22230ad15a7d_add_repository.py  2be09450964a_add_pdf_annotations.py  58e0130b2318_add_certificate_template_to_program.py  5984e0877cfb_initial_schema.py  79de4ef1d20c_add_training_templates.py  8a7610bb6416_add_after_lesson_id_to_training_evaluation.py  bb928f3d8f57_add_user_profile_fields.py  c1f3a2d8e945_add_audit_logs.py  d4e8f1a2b3c5_add_catalog_tables.py  d84ec47a023d_add_training_module.py  d8538f6b1176_add_evaluation_attempts.py  dc94de4295fe_add_program_repository_associations.py  f1a2b3c4d5e6_add_inventory_tables.py  f423f22e5443_add_rubrics.py  g2h3i4j5k6l7_add_commercial_tables.py  h3i4j5k6l7m8_add_production_tables.py  i4j5k6l7m8n9_add_fulfillment_tables.py  j5k6l7m8n9o0_add_integration_sync_state.py  (+4 more)
backend/app/: main.py
backend/scripts/: seed.py
backend/tests/: conftest.py  test_audit.py  test_auth.py  test_catalog.py  test_commercial.py  test_fulfillment.py  test_health.py  test_integrations.py  test_inventory.py  test_production.py  test_rbac.py  test_sso_validate_token.py  test_storage_safe_serving.py
frontend/: .gitignore  (+8 more)
(+362 files in other folders)
